# cv-rusty

./: .gitignore  404.html  ARCHITECTURE.md  Cargo.toml  DRAWING_FEATURE_SUMMARY.md  EMBEDDED.md  QUICK_REFERENCE.md  README.md  index.html  mkdocs.yaml
.github/workflows/: build.yaml  test.yaml
architecture/: index.html
architecture/architecture/: index.html
architecture/embedded/: index.html
changelogs/changelog-color-features/: index.html
changelogs/hex_color_support/: index.html
changelogs/opacity_support/: index.html
changelogs/unified_drawing_api/: index.html
changelogs/unified_show_image_api/: index.html
changelogs/window_feature_summary/: index.html
docs/: COLOR_CONVERSION_GUIDE.md  index.md  quick-reference.md
docs/architecture/: architecture.md  embedded.md
docs/changelogs/: changelog-color-features.md  hex_color_support.md  opacity_support.md  unified_drawing_api.md  unified_show_image_api.md  window_feature_summary.md
embedded/: index.html
examples/: README.md  color_conversion_example.rs  convolution_benchmark.rs  convolution_demo.rs  drawing_example.rs  drawing_grayscale_example.rs  drawing_hex_colors.rs  drawing_quick_test.rs  image_conversion.rs  no_std_example.rs  opacity_example.rs  read_jpeg_example.rs  read_png_example.rs  simple_imshow.rs  simple_show_image.rs  test_window.rs  transform_demo.rs  window_display_example.rs  write_image_example.rs
image-writing/: index.html
quick-reference/: index.html
search/: search_index.json
src/: color.rs  convolution.rs  drawing.rs  io.rs  lib.rs  matrix.rs  transform.rs  window.rs
(+14 files in other folders)
