[package]
name = "cv-rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
jpeg-decoder = { version = "0.3", optional = true }
png = { version = "0.17", optional = true }

[features]
default = ["std"]
std = ["jpeg-decoder", "png"]
alloc = []

[lib]
name = "cv_rusty"
path = "src/lib.rs"

[dev-dependencies]
jpeg-decoder = "0.3"
png = "0.17"
