[package]
name = "cv-rusty"
version = "0.3.0"
edition = "2021"

[dependencies]
jpeg-decoder = { version = "0.3", optional = true }
jpeg-encoder = { version = "0.6", optional = true }
png = { version = "0.17", optional = true }
rayon = { version = "1.8", optional = true }
minifb = { version = "0.27", optional = true }
libm = "0.2"

[features]
default = ["std", "parallel"]
std = ["jpeg-decoder", "jpeg-encoder", "png"]
parallel = ["std", "rayon"]
window = ["std", "minifb"]
alloc = []

[lib]
name = "cv_rusty"
path = "src/lib.rs"

[dev-dependencies]
jpeg-decoder = "0.3"
jpeg-encoder = "0.6"
png = "0.17"
